syntax = "proto3";

option go_package = "gitlab.com/fitdigital/digitization/grpc-protocol.git/daily_price;daily_price";

package daily_price;

import "google/protobuf/timestamp.proto";

service DailyPrice {
  rpc GetById(GetByIdRequest) returns (GetByIdResponse) {}
  rpc ApproveAndFreeze(ApproveAndFreezeRequest) returns (Empty) {}
  rpc RollbackApproveAndFreeze(ApproveAndFreezeRequest) returns (Empty) {}
  rpc Reject(RejectRequest) returns (Empty) {}
  rpc RollbackReject(RejectRequest) returns (Empty) {}
  rpc SendVietnamMsgById(GetByIdRequest) returns (Empty) {}
}

message Empty {}

message GetByIdRequest {
  string id = 1;
}

message GetByIdResponse {
  DailyPriceDocument daily_price_document = 1;
}

message ApproveAndFreezeRequest {
  string id = 1;
}

message DailyPriceDocument {
  string id = 1;
  google.protobuf.Timestamp created_at = 2;
  string created_by = 3;
  google.protobuf.Timestamp updated_at = 4;
  google.protobuf.Timestamp deleted_at = 5;
  string updated_by = 6;
  string no = 7;
  google.protobuf.Timestamp effective_date = 8;
  WinfeedDivision WinfeedDivision = 9;
  int32 status = 10;
}

message WinfeedDivision {
  int64 id = 1;
  string name = 2;
  string country_alpha_3 = 3;
  string country_name = 4;
  string code = 5;
}

message RejectRequest {
  string id = 1;
}
